Update pandas_03 - konversi tipe data string ke numerik pada kolom data frame.ipynb

--- a/pandas_03 - konversi tipe data string ke numerik pada kolom data frame.ipynb
+++ b/pandas_03 - konversi tipe data string ke numerik pada kolom data frame.ipynb
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "# persiapan data frame\n",
+    "# persiapan data frame dengan dict dan list\n",
     "data = {\n",
     "    'col1':['1', '2', '3', 'teks'],\n",
     "    'col2':['1', '2', '3', '4']\n",
