--- a/pandas_03 - konversi tipe data string ke numerik pada kolom data frame.ipynb
+++ b/pandas_03 - konversi tipe data string ke numerik pada kolom data frame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d440b782-5db4-4b82-a1a2-163e9eb8b952",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f79141b7-36a1-4d1d-9145-dd5d21dd93c9",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
        "3  teks    4"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "493f5cf8-fa52-426b-a4a9-f249418c2143",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "965f19e4-d781-4c53-b580-8265e1a7da33",
    "metadata": {},
    "outputs": [
@@ -149,22 +149,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>teks</td>\n",
-       "      <td>4</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,38 +172,38 @@
       ],
       "text/plain": [
        "   col1  col2\n",
-       "0     1     1\n",
-       "1     2     2\n",
-       "2     3     3\n",
-       "3  teks     4"
+       "0     1   1.0\n",
+       "1     2   2.0\n",
+       "2     3   3.0\n",
+       "3  teks   4.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# konversi tipe data dengan fungsi astype()\n",
-    "df_x = df.astype({'col2':'int'})\n",
+    "df_x = df.astype({'col2':'float'})\n",
     "df_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "5ed8846e-8323-4d1d-9b52-d5d41141441e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "col1    object\n",
-       "col2     int32\n",
+       "col1     object\n",
+       "col2    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "b53e1f01-1994-49c6-aabe-03cb5ec3b693",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "3   NaN     4"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
