--- a/pandas_15 - memecah kolom menjadi kolom baru.ipynb
+++ b/pandas_15 - memecah kolom menjadi kolom baru.ipynb
@@ -81,20 +81,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ']' (1757272400.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[4], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df[['nama_depan'], []'nama_belakang']] = df['nama_lengkap'].str.split(' ', expand=True)\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ']'\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama_lengkap</th>\n",
+       "      <th>tempat_lahir</th>\n",
+       "      <th>nama_depan</th>\n",
+       "      <th>nama_belakang</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thomas Brian</td>\n",
+       "      <td>Tulungagung, Jawa Timur</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Brian</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dewi Sartika</td>\n",
+       "      <td>Salappa, Mentawai</td>\n",
+       "      <td>Dewi</td>\n",
+       "      <td>Sartika</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Camilla Ava</td>\n",
+       "      <td>Sidoarjo, Jawa Timur</td>\n",
+       "      <td>Camilla</td>\n",
+       "      <td>Ava</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nama_lengkap             tempat_lahir nama_depan nama_belakang\n",
+       "0  Thomas Brian  Tulungagung, Jawa Timur     Thomas         Brian\n",
+       "1  Dewi Sartika        Salappa, Mentawai       Dewi       Sartika\n",
+       "2   Camilla Ava     Sidoarjo, Jawa Timur    Camilla           Ava"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[['nama_depan'], ['nama_belakang']] = df['nama_lengkap'].str.split(' ', expand=True)\n",
+    "df[['nama_depan', 'nama_belakang']] = df['nama_lengkap'].str.split(' ', expand=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama_lengkap</th>\n",
+       "      <th>tempat_lahir</th>\n",
+       "      <th>nama_depan</th>\n",
+       "      <th>nama_belakang</th>\n",
+       "      <th>kota</th>\n",
+       "      <th>Provinsi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Thomas Brian</td>\n",
+       "      <td>Tulungagung, Jawa Timur</td>\n",
+       "      <td>Thomas</td>\n",
+       "      <td>Brian</td>\n",
+       "      <td>Tulungagung</td>\n",
+       "      <td>Jawa Timur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dewi Sartika</td>\n",
+       "      <td>Salappa, Mentawai</td>\n",
+       "      <td>Dewi</td>\n",
+       "      <td>Sartika</td>\n",
+       "      <td>Salappa</td>\n",
+       "      <td>Mentawai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Camilla Ava</td>\n",
+       "      <td>Sidoarjo, Jawa Timur</td>\n",
+       "      <td>Camilla</td>\n",
+       "      <td>Ava</td>\n",
+       "      <td>Sidoarjo</td>\n",
+       "      <td>Jawa Timur</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   nama_lengkap             tempat_lahir nama_depan nama_belakang  \\\n",
+       "0  Thomas Brian  Tulungagung, Jawa Timur     Thomas         Brian   \n",
+       "1  Dewi Sartika        Salappa, Mentawai       Dewi       Sartika   \n",
+       "2   Camilla Ava     Sidoarjo, Jawa Timur    Camilla           Ava   \n",
+       "\n",
+       "          kota     Provinsi  \n",
+       "0  Tulungagung   Jawa Timur  \n",
+       "1      Salappa     Mentawai  \n",
+       "2     Sidoarjo   Jawa Timur  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['kota', 'Provinsi']] = df['tempat_lahir'].str.split(',', expand=True)\n",
     "df"
    ]
   }
